CVS
- CHG: the log command now has the strict-option
       set to false instead of true. (Stefan)
- CHG: time/date is now shown using the local
       format. This solves issue 49. (Stefan)
- CHG: removed dependency to msimg32.dll. (Stefan)
- ADD: repository browser works with svn://
       svn+ssl:// (Stefan)

Version 0.11.2
- BUG: entering the settings page without
       activating the icon overlay page
       resulted in complete loss of 
       overlay settings if other changes
       were saved. (Stefan)
- BUG: in our own caching provider the
       username/password wasn't initialized
       on the first attempt - this lead to
       undetermined behaviour and crashes!
       (Stefan)
- CHG: some minor GUI changes in the property
       page for the explorer, according to
       the hint from Dimentiy. (Stefan)
- CHG: the url in the property page is no
       longer compacted. (Stefan)

Version 0.11.0
- BUG: if all files were deselected in the commit
       dialog then the progress dialog couldn't be
       closed anymore. (Stefan)
- BUG: Resizing of dialogs didn't work correctly
       so I changed the resizing system (Stefan)
- BUG: corrected tooltip in the checkout dialog (Stefan)
- BUG: for network paths TSVN created a file:// path
       with five instead of four slashes. (Stefan)
- CHG: Repository browser now has a minimal size
       so that resizing works better. (Stefan)
- CHG: if the checkout directory is left empty
       then the OK button is now disabled (Stefan)
- CHG: if no valid path is given then the
       repository browser opens now on the
       desktop by default. (Stefan)
- CHG: unified interface elements. Issue 45. (Stefan)
- CHG: made the menu entries align with others. (Stefan)
- CHG: the menu icons are still ownerdrawn, but
       if the registry entry 
       (DWORD)HKCU\Software\TortoiseSVN\OwnerdrawnMenus
       is set to 0 (zero) then TortoiseSVN uses
       the system to draw the icons. (Stefan)       